--- a/index_portfolio_vr2.html
+++ b/index_portfolio_vr2.html
@@ -73,9 +73,9 @@
     <main>
         <!-- graphic -->
         <div class="section1 position-relative">
-            <!-- background -->
-            <div class="bg-wrap position-absolute">
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="500 0 2787.25 2903.13" width="145vw">
+            <!-- bg sun-kit -->
+            <div class="bg-wrap-top position-absolute">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="500 0 2787.25 2903.13" width="140vw">
                     <defs>
                         <style>
                             .cls-1 {
@@ -111,7 +111,7 @@
                     </div>
                 </div>
             </div>
-            <!-- graphic-work:toooot + planewt + eye + tea -->
+            <!-- graphic-work:toooot + planewt + eye + tea + candle -->
             <div class="container">
                 <div class="row toooot justify-content-center">
                     <div class="toooot-wrap d-flex align-items-center w-100 pl-4">
@@ -178,13 +178,56 @@
                     </div>
                 </div>
             </div>
-            <!-- packaging+film:candle + pork -->
+            <!-- bg blue-sheet -->
+            <div class="bg-wrap-butt position-absolute">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="1100 0 2149.79 1439.38" width="130vw">
+                    <defs>
+                        <style>
+                            .cls-2 {
+                                fill: #00172f;
+                            }
+                        </style>
+                    </defs>
+                    <g id="圖層_2" data-name="圖層 2">
+                        <g id="圖層_1-2" data-name="圖層 1">
+                            <path class="cls-2"
+                                d="M284,1439.38c156.86,0,284-161.11,284-359.85S440.89,719.69,284,719.69,0,558.58,0,359.84,127.16,0,284,0H1865.77c-156.87,0-284,161.11-284,359.84s127.16,359.85,284,359.85,284,161.11,284,359.84-127.16,359.85-284,359.85Z" />
+                        </g>
+                    </g>
+                </svg>
+            </div>
         </div>
         <!-- film -->
         <div class="section2 w-100">
-            <div class="row pork">
-                <div class="slider">
-
+            <div class="row pork align-items-center">
+                <div class="slider-wrap position-relative">
+                    <ul class="slider-wrap-img d-flex list-unstyled position-absolute">
+                        <li><img src="./img/skate1.JPG" alt=""></li>
+                        <li><img src="./img/skate2.JPG" alt=""></li>
+                        <li><img src="./img/skate3.JPG" alt=""></li>
+                        <li><img src="./img/skate4.JPG" alt=""></li>
+                        <li><img src="./img/skate5.JPG" alt=""></li>
+                        <li><img src="./img/skate6.JPG" alt=""></li>
+                        <li><img src="./img/skate7.JPG" alt=""></li>
+                        <li><img src="./img/skate1.JPG" alt=""></li>
+                        <li><img src="./img/skate2.JPG" alt=""></li>
+                        <li><img src="./img/skate3.JPG" alt=""></li>
+                    </ul>
+                    <ul class="slider-dots list-unstyled position-absolute d-flex justify-content-end w-100">
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                    </ul>
+                </div>
+                <div class="work-text ml-5">
+                    <p class="title-text">TOOOOT</p>
+                    <p>branding design</p>
+                    <p>graduation projrct</p>
                 </div>
             </div>
             <div class="row cow">
@@ -205,7 +248,7 @@
         integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
         crossorigin="anonymous"></script>
     <script>
-        // carousel 始
+        // carousel-codepen 始
         var carousel = $(".carousel"),
             currdeg = 0;
 
@@ -226,7 +269,33 @@
                 "transform": "rotateY(" + currdeg + "deg)"
             });
         }
-// carousel 終
+        // carousel-codepen 終
+
+        // carousel-class 始
+        let index = 0;
+        $('.slider-dots li').first().css('background', 'rgba(225, 225, 250, .8)');
+
+        $('.slider-dots li').click(function () {
+            $(this).css('background', 'rgba(225, 225, 250, .8)').siblings().css('background', 'none');
+
+            $('.slider-wrap-img').css('right', -420 * $(this).index());
+            index = $(this).index();
+        })
+
+        setInterval(function () {
+            index = index + 1;
+            $('.slider-wrap-img').css('transition', '0.5s').css('right', -420 * index);
+            let dotIndex = (index > 6) ? 0 : index;
+            $('.slider-dots li').eq(dotIndex).css('background', 'rgba(225, 225, 250, .8)').siblings().css('background', 'none');
+        }, 2000);
+
+        $('.slider-wrap-img').on('transitionend webkitTransitionEnd', function () {
+            if (index == 7) {
+                $('.slider-wrap-img').css('transition', 'none').css('right', '0')
+                index = 0;
+            }
+        })
+// carousel-class 終
     </script>
 </body>
 
